# fastapi-vue

./: README.md  pyproject.toml
fastapi_vue/: staticfiles.py
